--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lodash": "4.17.21"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=18.0.0 <21.x.x",
     "npm": ">=6.0.0"
   }
 }
